# Higher-Order-Model

./: CMakeLists.txt  README.md  test.c++
Docs/Schemes/: Schemes.aux  Schemes.fdb_latexmk  Schemes.fls  Schemes.tex
Docs/Schemes/Parts/: 2-3DOperators.aux  2-3DOperators.tex  config.aux  config.tex  coordinatetransform.aux  coordinatetransform.tex  dia.aux  discretecommon.aux  discretecommon.tex  discreteheatequasion.aux  discreteheatequation.aux  discreteheatequation.tex  discretesurfaceequasion.aux  discretesurfaceequasion.tex  discretevelocityequation.aux  discretevelocityequation.tex  title.aux  title.tex
Docs/Text/: Main.aux  Main.fdb_latexmk  Main.fls  Main.tex
Docs/Text/Parts/: config.aux  modeldescription.aux  modeldescription.tex  momentumconservation.aux  momentumconservation.tex  surfaceequation.aux  surfaceequation.tex  title.aux  title.tex
Field/: Field.c++  Field.h
HO/: HigherOrder.h
Plotters/: interactivePlotter.ipynb  plotter.ipynb
Results/: DX.txt  DY.txt  surface.txt  uAverage.txt  vAverage.txt
include/: Field.h  Mesh.h  Model.h  Physics.h
src/: Field.c++  Mesh.c++  Model  Model.c++  ModelCoeffs.c++  ModelMesh.c++  Modelsbh.c++  Modeluv.c++  Physics.c++  main  main.c++  surface1.txt
tests/: test
tests/CheckSchemes/: main  main.c++  mainxx.c++  mainxy.c++  plot.ipynb  xx.ipynb  xy.ipynb  xz.ipynb  zx.ipynb  zz.ipynb
tests/include/: FieldTest.h
tests/src/: FieldTest.c++  mainTest.c++
